# alpine-lanl

./: .gitignore  README.md
Alpine_milestone_dev_related/Alpine_Milestone_16-14/Catalyst_scripts/: feature_analysis_slice_render.py  feature_analysis_volume_render.py
Alpine_milestone_dev_related/Alpine_Milestone_16-18/: plot_performance_omp.ipynb  repo links for milestone.txt
Alpine_milestone_dev_related/Alpine_Milestone_16-18/.ipynb_checkpoints/: plot_performance_omp-checkpoint.ipynb
Alpine_milestone_dev_related/Alpine_Milestone_16-18/MFIX_Catalyst_vtk_filter_openmp_scaling/: fcc1.1173799  fcc16.1173857  fcc2.1173807  fcc4.1173819  fcc8.1173841  submit.sh
Alpine_milestone_dev_related/Alpine_Milestone_16-22/MFIX_catalyst_initial_perf_data/: fcc.1425948_CPU  fcc.1678391_GPU
Alpine_milestone_dev_related/Alpine_milestone_16-17/Tracking_Codes/: bubble_analysis.py  generate_image.py
Alpine_milestone_dev_related/Alpine_milestone_tracking_codes/src/: bubble_analysis.py  generate_image.py  generate_segmented_feature_volumes.py  track_single_bubble_withcdb.py
Alpine_milestone_dev_related/Specific_MI_measures/helper_codes/: hist_sampling.cxx
Alpine_milestone_dev_related/Specific_MI_measures/src/: mi_functions.py
Alpine_milestone_dev_related/alpine_feature_analysis_vtk_filter/: CMakeLists.txt
Alpine_milestone_dev_related/alpine_milestone_16_14/Catalyst_scripts/: feature_analysis_particle_render.py
Alpine_milestone_dev_related/alpine_milestone_stdm16-3_statistical_feature_analysis/: .gitignore  generate_segmented_feature_volumes.py
Alpine_milestone_dev_related/alpine_milestone_stdm16-3_statistical_feature_analysis/SLIC_3D/: element.cxx  main.cxx  slic.cxx  slic.h  vtk_headers.h
Alpine_milestone_dev_related/alpine_milestone_stdm16-6_statistical_feature_analysis/: CMakeLists.txt  README.md
Alpine_milestone_dev_related/alpine_milestone_stdm16-6_statistical_feature_analysis/statistical_feature_detection/: CMakeLists.txt  FieldGaussianSimilarity.h  FieldGaussianSimilarity.hxx  SLIC.hxx
Alpine_milestone_dev_related/bubble_analysis_vtkm/: .gitignore
Alpine_milestone_dev_related/bubble_analysis_vtkm/statistical_feature_detection/: CMakeLists.txt  SLIC.h  SLICHelper.h  (+3 more)
Alpine_milestone_dev_related/em_gmm/: em.cxx  out
Alpine_milestone_dev_related/feature_detection_alpine_milestone_STDM16-3/: .gitignore  Feature_analysis.py  SLIC_gaussian_distance.py  compute_density_field.py
Alpine_milestone_dev_related/feature_detection_alpine_milestone_STDM16-5/compute_gaussian_similarity/: CMakeLists.txt  ComputeBhattacharyyaDist.h  FieldGaussianSimilarity.hxx  StdevByKey.h  main.cxx
Alpine_milestone_dev_related/feature_detection_alpine_milestones/: SLIC_gaussian_distance.py  compute_density_field.py
Alpine_milestone_dev_related/feature_tracking_visualization/: .gitignore  testing.ipynb
Alpine_milestone_dev_related/stat_feature_detect_vtkm/: .gitignore  env_summit.sh  submit_summit.sh
Alpine_milestone_dev_related/stat_feature_detect_vtkm/statistical_feature_detection/: Alpine_FY22_planning.txt  CMakeLists.txt  ComputeBhattacharyyaDist.h  FieldGaussianSimilarity.hxx  SLIC.hxx  SLICHelper.h  StdevByKey.h  VTKMHeaders.h  main.cxx
Alpine_milestone_dev_related/statistical_data_comparison/: .gitignore
sampling/code/: hdf5_compare_quality_data-no-vtk.py  power-specturm.py  reconstruct_update_Nyx_data.py
stat_feature_detect_research_codes/FRBS_multivar_sampling/fuzzy_rule_based_sampling_histogram_based_vti/: CMakeLists.txt  README.md  cpp_headers.h  glm_headers.h  main.cxx  rule_base_func.h  utils.h  vtk_headers.h
stat_feature_detect_research_codes/FRBS_tracking/fuzzy_tracking_codes/draw_uncertain_tracking_graph/: CMakeLists.txt  cpp_headers.h  main.cxx  opengl_headers.h
stat_feature_detect_research_codes/FRBS_tracking/fuzzy_tracking_codes/fuzzy_rule_based_tracking/: CMakeLists.txt  feature_class.h  fuzzy_tracking.cxx  fuzzy_tracking.cxx_with_pca_as_a_feature  inputmfs.txt  membership_func.h  outputmfs.txt  py_function_2D.py  util_funcs.h
stat_feature_detect_research_codes/FRBS_tracking/fuzzy_tracking_codes/generate_tracking_test_data/: CMakeLists.txt  combine_objects.cxx_bkp  generate_tracking_data.cxx  multi_spheres.vti
stat_feature_detect_research_codes/FRBS_tracking/fuzzy_tracking_codes/tracking_training_data/: CMakeLists.txt  feature_class.h  fuzzy_toy_example.m  gaussian_data_in.csv  gaussian_data_out.csv  generate_bivariate_data.ipynb  generate_fuzzy_system_from_trainingdata.m  membership_func.fig  test_FIS.m  tracking.cxx  tracking.cxx_with_pca  vtk_headers.h
stat_feature_detect_research_codes/FRBS_tracking/fuzzy_tracking_codes/tracking_training_data/.ipynb_checkpoints/: generate_bivariate_data-checkpoint.ipynb
stat_feature_detect_research_codes/PMI_based_sampling/: CMakeLists.txt  cpp_headers.h  pmi_based_sampling.cxx
stat_feature_detect_research_codes/SLIC_3D/: CMakeLists.txt  element.H  element.cxx  main.cxx  slic.H  slic.cxx  vtk_headers.h
stat_feature_detect_research_codes/bubble_analysis_vtk_filter/: bubble_analysis_vtk_filter.cpp  catalyst_script.py
stat_feature_detect_research_codes/cinema_explorer_final/: cinema_explorer.html
stat_feature_detect_research_codes/info_theory_fuse/: .gitignore  README.md
stat_feature_detect_research_codes/multivar_sampling/Analysis/compute_SNR/: CMakeLists.txt  main.cxx  vtk_headers.h
stat_feature_detect_research_codes/poisson_disc_sampling/: poison_disk_samples.csv  poisson_disc_sampling.ipynb
stat_feature_detect_research_codes/python_notebooks/: Sampling evaluation image based.ipynb  pointcloud_sampling_nearest_neighbor.ipynb
stat_feature_detect_research_codes/python_slic_example/: multivar_image_analysis.ipynb
stat_feature_detect_research_codes/query_samples/: query_from_samples.ipynb  query_from_samples_1.ipynb  query_study.py
stat_feature_detect_research_codes/time_sampling/: entropy_based_analysis.ipynb  time_sampling_particle.py
stat_feature_detect_research_codes/vtk_volren_fixed_TF/: CMakeLists.txt  Main_Controller.cpp  Vol_Renderer.cpp  cpp_headers.h  vtk_headers.h  x_vals.txt  y_vals.txt
(+232 files in other folders)
